--- a/stories/01262024_office_vacancy/index.html
+++ b/stories/01262024_office_vacancy/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 
-<title>Twin Cities home prices</title>
+<title>Downtown office vacancy rates</title>
 
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
@@ -11,7 +11,7 @@
 
 <style>
 	body { margin: 0; padding: 0; }
-	#map { position: absolute; width: 100%; height: 60%}
+	#map { position: absolute; width: 100%; height: 100%}
 	h2 { clear: both; font-family: Arial, Helvetica, sans-serif;}
 	p { clear: both; font-family: Arial, Helvetica, sans-serif;}
 </style>
