Updated legend colors

--- a/stories/01262024_office_vacancy/index.html
+++ b/stories/01262024_office_vacancy/index.html
@@ -53,7 +53,7 @@
 			'paint': {
 			'fill-color': {
 				property: 'vacancy_rate',
-				stops: [[0, '#4867d9'], [100, '#f00']]
+				stops: [[0, '#ffc100'], [20, '#ff9a00'], [90, '#ff0000']]
 			},
 			'fill-opacity': [
 				'case',
