Tweaking file structure for debugging

--- a/stories/01262024_office_vacancy/index.html
+++ b/stories/01262024_office_vacancy/index.html
@@ -37,7 +37,7 @@
     	let hoveredPolygonId = null;
 
 		map.on('load', function() {
-		  var url = 'data/office_vacancies.json';
+		  var url = '/data/office_vacancies.json';
 		  map.addSource('offices', { 
 		  	type: 'geojson', 
 		  	data: url,
