Added cooperative gestures for mobile scrolling

--- a/stories/01262024_office_vacancy/index.html
+++ b/stories/01262024_office_vacancy/index.html
@@ -31,7 +31,8 @@
         // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
         style: 'mapbox://styles/mapbox/light-v11', // style URL
         center: [-93.26912014386257, 44.97521074054782], // starting position [lng, lat]
-        zoom: 14// starting zoom
+        zoom: 14,// starting zoom
+        cooperativeGestures: true
     });
 
     	let hoveredPolygonId = null;
