--- a/stories/01262024_office_vacancy/index.html
+++ b/stories/01262024_office_vacancy/index.html
@@ -56,7 +56,7 @@
 			'layout': {},
 			'paint': {
 			'fill-color': {
-				property: 'percent_leased',
+				property: 'vacancy_rate',
 				stops: [[0, '#d7191c'], [100, '#2c7bb6']]
 			},
 			'fill-opacity': [
