Updated title to Avail Rates

--- a/stories/01262024_office_vacancy/index.html
+++ b/stories/01262024_office_vacancy/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-<h2>Leasing rates of downtown Minneapolis office buildings. </h2>
+<h2>Availability rates of downtown Minneapolis office buildings. </h2>
 <p>Data provided by CoStar Inc. as of January 2024. The availability rate is the space currently being marketed as available for lease or sale, including spaces that may be unoccupied or leased. Darker colors indicate more space available.</p>
 <div id="map" height="400px"></div>
 
