--- a/stories/01262024_office_vacancy/index.html
+++ b/stories/01262024_office_vacancy/index.html
@@ -12,7 +12,7 @@
 
 <style>
 	body { margin: 0; padding: 0; }
-	#map { position: absolute; width: 100%; height: 100%}
+	#map { position: absolute; width: 100%; height: 80%}
 	h2 { clear: both; font-family: Arial, Helvetica, sans-serif;}
 	p { clear: both; font-family: Arial, Helvetica, sans-serif;}
 </style>
@@ -23,7 +23,7 @@
 
 <h2>Availability rates of downtown Minneapolis office buildings. </h2>
 <p>Data provided by CoStar Inc. as of January 2024. The availability rate is the space currently being marketed as available for lease or sale, including spaces that may be unoccupied or leased. Use your cursor to hover over a building to see more detail. Darker colors indicate more space available.</p>
-<div id="map" height="400px"></div>
+<div id="map"></div>
 
 <script>
 
