--- a/stories/10312025_asian_businesses/index.html
+++ b/stories/10312025_asian_businesses/index.html
@@ -1,169 +1,82 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Datawrapper map</title>
 
-        <style>
-            #map-container { 
-                width: 100%;
-             }
-            .dw {
-                display: inline-block;
-            }
-            * {box-sizing:border-box}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Datawrapper Map Switcher</title>
+  <style>
+    body {
+      margin: 30px;
+      font-family: Arial, sans-serif;
+    }
+    .container {
+      display: flex;
+      align-items: center;
+      height: 100vh;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+    .map-container {
+      flex: 1;
+    }
+    .map-container iframe {
+      width: 100%;
+      height: 600px;
+      border: none;
+      display: none;
+    }
+    .map-container iframe.active {
+      display: block;
+    }
+    .year-buttons {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-left: 20px;
+    }
+    .year-buttons button {
+      padding: 10px 20px;
+      margin-bottom: 10px;
+      cursor: pointer;
+      border: 1px solid #ccc;
+      background-color: #f0f0f0;
+    }
+    .year-buttons button.active {
+      background-color: #a899a7;
+      color: white;
+      border-color: #a899a7;
+  </style>
+</head>
+<body>
 
-            /* Slideshow container */
-            .slideshow-container {
-              max-width: 1000px;
-              position: relative;
-              margin: auto;
-            }
+  <div class="container">
+    <div class="map-container">
+    <iframe title="Asian population in the Twin Cities, 1990" class="active" aria-label="Choropleth map" id="map1990" src="https://datawrapper.dwcdn.net/T7T87/1/" scrolling="no" frameborder="0" style="min-width: 100% !important; border: none;" height="600" data-external="1"></iframe>
 
-            /* Hide the images by default */
-            .mySlides {
-              display: none;
-            }
-
-            /* Next & previous buttons */
-            .prev, .next {
-              cursor: pointer;
-              position: absolute;
-              top: 50%;
-              width: auto;
-              margin-top: -22px;
-              padding: 16px;
-              color: white;
-              font-weight: bold;
-              font-size: 18px;
-              transition: 0.6s ease;
-              border-radius: 0 3px 3px 0;
-              user-select: none;
-            }
-
-            /* Position the "next button" to the right */
-            .next {
-              right: 0;
-              border-radius: 3px 0 0 3px;
-            }
-
-            /* On hover, add a black background color with a little bit see-through */
-            .prev:hover, .next:hover {
-              background-color: rgba(0,0,0,0.8);
-            }
-
-            /* Caption text */
-            .text {
-              color: #f2f2f2;
-              font-size: 15px;
-              padding: 8px 12px;
-              position: absolute;
-              bottom: 8px;
-              width: 100%;
-              text-align: center;
-            }
-
-            /* Number text (1/3 etc) */
-            .numbertext {
-              color: #f2f2f2;
-              font-size: 12px;
-              padding: 8px 12px;
-              position: absolute;
-              top: 0;
-            }
-
-            /* The dots/bullets/indicators */
-            .dot {
-              cursor: pointer;
-              margin: 10px;
-              padding: 10px;
-              background-color: #bbb;
-              border-radius: 60%;
-              font-family: Arial, Helvetica, sans-serif;
-              color: #fff;
-              transition: background-color 0.6s ease;
-            }
-
-            .active, .dot:hover {
-              background-color: #717171;
-            }
-
-            /* Fading animation 
-            .fade {
-              animation-name: fade;
-              animation-duration: 1.5s;
-            }
-
-            @keyframes fade {
-              from {opacity: .4}
-              to {opacity: 1}
-            }*/
-        </style>
-
-    </head>
-    <body>
-
-<!-- Slideshow container -->
-<div class="slideshow-container">
-<!-- The dots/circles -->
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)">1990</span>
-  <span class="dot" onclick="currentSlide(2)">2020</span>
-</div>  
-
-  <!-- Full-width images with number and caption text -->
-  <div class="mySlides">
-    <iframe title="Asian population in the Twin Cities, 1990" aria-label="Choropleth map" id="datawrapper-chart-T7T87" src="https://datawrapper.dwcdn.net/T7T87/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="550" data-external="1"></iframe>
-
+            <iframe title="[ Insert title here ]" aria-label="Choropleth map" class="dw" id="map2020" src="https://datawrapper.dwcdn.net/t1o6X/1/" scrolling="no" frameborder="0" style="min-width: 100% !important; border: none;" height="600" data-external="1"></iframe>
+    </div>
+    <div class="year-buttons">
+      <button id="btn1990" class="active" onclick="showMap('1990')">1990</button>
+      <button id="btn2020"onclick="showMap('2020')">2020</button>
+    </div>
   </div>
-
-  <div class="mySlides fade">
-            <iframe title="[ Insert title here ]" aria-label="Choropleth map" class="dw" id="datawrapper-chart-t1o6X" src="https://datawrapper.dwcdn.net/t1o6X/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="550" data-external="1"></iframe>
-  </div>
-
-
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br>
-
 
 <script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}})}();
 </script>
 
-<script>
+  <script>
+    function showMap(year) {
+      document.querySelectorAll('.map-container iframe').forEach(iframe => {
+        iframe.classList.remove('active');
+      });
+      document.getElementById('map' + year).classList.add('active');
 
-let slideIndex = 1;
-showSlides(slideIndex);
+      document.querySelectorAll('.year-buttons button').forEach(button => {
+        button.classList.remove('active');
+      });
+      document.getElementById('btn' + year).classList.add('active');
+    }
+  </script>
 
-// Next/previous controls
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
-
-// Thumbnail image controls
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
-  let i;
-  let slides = document.getElementsByClassName("mySlides");
-  let dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";
-  }
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
-} 
-</script>
-
-    </body>
-    </html>
+</body>
+</html>
